# rust-poseidon

./: Cargo.toml  README.md
benches/: poseidon.rs
src/: lib.rs
